[project]
name = "dbeb-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.78",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-qdrant>=0.2.1",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.8",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "pypdf>=6.1.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.1",
]
